完善项目逻辑结构 新增免疫组化分析模块